# automation-research-ai-project

./: README.md  pyproject.toml  report.md  requirements.txt  watch_to_process.py
src/automation_research_ai_project/: AudioHandler.py  ExpenseExtractor.py  ExpenseParser.py  FileRouter.py  InputFolderWatcher.py  LLMClient.py  LLMRouter.py  TextHandler.py  crew.py  main.py  main_.py  prompt.txt
src/automation_research_ai_project/handlers/: ImageHandler.py  TextHandler.py
src/automation_research_ai_project/input_files/: FileInputClassifier.py
src/automation_research_ai_project/interactions/: input_classifier.py
src/automation_research_ai_project/interactions/text/: whatsapp_text_sample.txt
src/automation_research_ai_project/models/: expense.py  expense_list.py
src/automation_research_ai_project/output_csv/: processed_expenses.csv
src/automation_research_ai_project/prompts/: PromptFormatter.py
src/automation_research_ai_project/utils/: csv_writer.py
tests/: whatsapp_text_sample.txt
