[project]
name = "automation_research_ai_project"
version = "0.1.0"
description = "automation-research-ai-project using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
automation_research_ai_project = "automation_research_ai_project.main:run"
run_crew = "automation_research_ai_project.main:run"
train = "automation_research_ai_project.main:train"
replay = "automation_research_ai_project.main:replay"
test = "automation_research_ai_project.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
